                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.5
  

  *) [TS-2092] Use of uninitialized member in HdrHeap.

  *) [TS-2052] ET_SSL thread spinning
   Author: Can Selcik <cselcik at linkedin.com>

  *) [TS-2090 Make proxy.config.allocator.enable_reclaim default based on
   build instructions.

  *) [TS-2086] Remove a few more unused configs.

  *) [TS-1685] Remove TS_MICRO and fellas.

  *) [TS-1255] Add more overridable configurations, and fix bugs in how we
   deal with some of these (all "float" configs were completely broken). I
   also modified the regression tests to be less easy to fool.

  *) [TS-1976] Prevent an invalid httpport argument being passed from
   traffic_manager to traffic_server
   Author: Thach Tran <tranngocthachs@gmail.com>

  *) [TS-2076] Removed proxy.config.http.accept_encoding_filter_enabled, which
   is obsolete.

  *) [TS-2075] Cleanup around suboptimal checks on redirects.

  *) [TS-2074] Remove proxy.config.http.server_port and
   proxy.config.http.server_other_ports remnants.

  *) [TS-2073] Set the defaults for request_hdr_max_size and
   response_hdr_max_size properly.

  *) [TS-2071] Remove proxy.config.http.session_auth_cache_keep_alive_enabled
   remnants.

  *) [TS-2072] Remove proxy.config.http.avoid_content_spoofing, and also fix a
    logical bug around the tests of when to mark the request header dirty.

  *) [TS-1993] SSL certificate chains are loaded from the wrong directory.

  *) [TS-2059] Remove dead code in EnvBlock.cc and processSpawn().

  *) [TS-2057] Removed deprecated proxy port configuration values from records.config.

  *) [TS-1280] Add url match token about cache control rule.

  *) [TS-2064] Fix the authproxy plugin to send an error body.

  *) [TS-2061] Avoid writing outside buffer boundaries in LogFile overfill
   buffers (for ASCII logging). Author: quehan.

  *) [TS-2041] Allow environment values to override records.config settings.
